{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 389,
  "lineage": "a1cdbcf0-2a8d-fd6e-3975-7195aa1366e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0756fbca465a59a30",
            "arn": "arn:aws:ec2:us-east-1:557668857118:instance/i-06705712dff849d08",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06705712dff849d08",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "qwerty.pem",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2fcb5670fc745ee",
            "private_dns": "ip-10-1-1-84.ec2.internal",
            "private_ip": "10.1.1.84",
            "public_dns": "ec2-54-147-21-22.compute-1.amazonaws.com",
            "public_ip": "54.147.21.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 0,
                "volume_id": "vol-0f8e08a6d91a57bbf",
                "volume_size": 50,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa540f974f6cdd3b",
            "tags": {
              "Name": "alb"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "alb"
            },
            "vpc_security_group_ids": [
              "sg-0e10b9cf1ad2b9189"
            ]
          },
          "depends_on": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/alb/b48a9c4f30ba537c",
            "arn_suffix": "targetgroup/alb/b48a9c4f30ba537c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/alb/b48a9c4f30ba537c",
            "lambda_multi_value_headers_enabled": false,
            "name": "alb",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04114ed591b750e9a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/alb/b48a9c4f30ba537c-20190531040812526800000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/alb/b48a9c4f30ba537c",
            "target_id": "i-06705712dff849d08"
          },
          "depends_on": [
            "aws_instance.this",
            "aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557668857118:security-group/sg-0e9a2ca5421a404c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "EC2 egress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e10b9cf1ad2b9189"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0e9a2ca5421a404c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-alb-20190531040727368800000002",
            "name_prefix": "alb-alb-",
            "owner_id": "557668857118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04114ed591b750e9a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557668857118:security-group/sg-0e10b9cf1ad2b9189",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Full egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e10b9cf1ad2b9189",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB ingress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9a2ca5421a404c4"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Self ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "alb-ec2-20190531040727367100000001",
            "name_prefix": "alb-ec2-",
            "owner_id": "557668857118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04114ed591b750e9a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "EC2 egress",
            "from_port": 8080,
            "id": "sgrule-1032104613",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9a2ca5421a404c4",
            "self": false,
            "source_security_group_id": "sg-0e10b9cf1ad2b9189",
            "to_port": 8080,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.alb",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP ingress",
            "from_port": 80,
            "id": "sgrule-4203500683",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9a2ca5421a404c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS ingress",
            "from_port": 443,
            "id": "sgrule-307383315",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9a2ca5421a404c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_egress_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Full egress",
            "from_port": 0,
            "id": "sgrule-1072968256",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e10b9cf1ad2b9189",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "ALB ingress",
            "from_port": 8080,
            "id": "sgrule-854468740",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e10b9cf1ad2b9189",
            "self": false,
            "source_security_group_id": "sg-0e9a2ca5421a404c4",
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Self ingress",
            "from_port": 0,
            "id": "sgrule-3999343428",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e10b9cf1ad2b9189",
            "self": false,
            "source_security_group_id": "sg-0e10b9cf1ad2b9189",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.ec2"
          ]
        }
      ]
    }
  ]
}